# rm2022_auto_infantry_ws

./: .gitignore  README.md
sh/: 0-双击关闭所有终端.sh  1-启动仿真.sh
src/auto_car/: CMakeLists.txt  auto_world.world  package.xml
src/auto_car/config/: auto_car.rviz  joint_names_auto_car.yaml
src/auto_car/launch/: display.launch  gazebo.launch
src/auto_car/meshes/: cam_link.STL  imu_link.STL  lf_wheel_link.STL  lidar_link.STL  lr_wheel_link.STL  rf_wheel_link.STL  rr_wheel_link.STL  yaw_link.STL
src/auto_car/robots/: auto_car.xacro
src/auto_car/urdf/: auto_car.csv  auto_car.urdf
src/auto_car/urdf/base/: base.gazebo.xacro  base.urdf.xacro
src/auto_car/urdf/sensor/camera/: camera.urdf.xacro
src/auto_car/urdf/sensor/imu/: imu.urdf.xacro
src/auto_car/urdf/sensor/lidar/: lidar.gazebo.xacro  lidar.urdf.xacro
src/auto_car/urdf/suspension/: globalpitch.urdf.xacro  globalyaw.urdf.xacro  suspension.gazebo.xacro  suspension.transmission.xacro
src/auto_car/urdf/wheel/: wheel.gazebo.xacro  wheel.transmission.xacro  wheel_lf.urdf.xacro  wheel_lr.urdf.xacro  wheel_rf.urdf.xacro  wheel_rr.urdf.xacro
src/auto_control/: CMakeLists.txt  package.xml
src/auto_control/config/: taurus_control.yaml
src/auto_control/include/: joint_state_update_node.h  joy_ctrl.h
src/auto_control/launch/: joy_control.launch  launch_robot.launch  taurus_control.launch
src/auto_control/scripts/: tf_control.py
src/auto_control/src/: joint_state_update_node.cpp  joy_ctrl.cpp
src/auto_nav/: CMakeLists.txt
src/roborts_msgs/: CMakeLists.txt
src/teleop_twist_keyboard/: CMakeLists.txt
(+31 files in other folders)
